--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h1>R Hrishikesh Varahan</h1>
       <figure>
         <img
-          src="Hrishi_image1.jpg"
+          src="Hrishi image.jpg"
           alt="Hrishikesh"
           title="Photo"
           width="150"
@@ -68,7 +68,7 @@
         <p><a href="#school">Schooling</a></p>
 
         <img
-          src="VIT_23/720843.jpg"
+          src="720843.jpg"
           alt="Image of school"
           title="School"
           width="300"
@@ -77,7 +77,7 @@
         <p><a href="#grad">Graduation</a></p>
 
         <img
-          src="VIT_23/col.jpg"
+          src="col.jpg"
           alt="Image of College"
           title="College"
           width="300"
@@ -86,7 +86,7 @@
         <p><a href="#contact">Contact me</a></p>
 
         <img
-          src="VIT_23/contact.png"
+          src="contact.png"
           alt="Image of Contact"
           title="Contact"
           width="300"
@@ -105,7 +105,7 @@
         </ul>
 
         <img
-          src="VIT_23/MCC-LOGO.jpg"
+          src="MCC-LOGO.jpg"
           alt="Image of MCC school"
           title="MCC School"
           width="150"
@@ -120,7 +120,7 @@
         </ul>
 
         <img
-          src="VIT_23/dps.jpg"
+          src="dps.jpg"
           alt="Image of DPS school"
           title="DPS School"
           height="200"
@@ -135,7 +135,7 @@
         </ul>
 
         <img
-          src="VIT_23/lwa.jpeg"
+          src="lwa.jpeg"
           alt="Image of LWA school"
           title="LWA School"
           width="200"
@@ -155,7 +155,7 @@
         </dl>
         <figure>
           <img
-            src="VIT_23/Vellore_Institute_of_Technology_seal_2017.svg.png"
+            src="Vellore_Institute_of_Technology_seal_2017.svg.png"
             alt="Image of VIT"
             title="VIT"
             width="200"
@@ -170,7 +170,7 @@
           R Hrishikesh Varahan
           <figure>
             <img
-              src="VIT_23/Hrishi_image1.jpg"
+              src="Hrishi_image1.jpg"
               alt="Pic of Hrishikesh"
               title="Photo"
               width="300"
