--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h1>R Hrishikesh Varahan</h1>
       <figure>
         <img
-          src="Hrishi image.jpg"
+          src="Hrishikesh_pic.jpg"
           alt="Hrishikesh"
           title="Photo"
           width="150"
