--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,17 @@
     <title>R Hrishikesh Varahan_1</title>
     <link rel="icon" href="india.webp" type="image/x-icon" />
   </head>
+  <style>
+    html{
+      font-size: 14px;
+    }
+    body {
+        color: rgb(162, 167, 168);
+        font-family: cursive;
+        font-style: italic;
+        background-color: rgb(3, 24, 46);
+    }
+  </style>
   <body>
     <h1>Page 2:</h1>
     <h4>Contents of page 2:</h4>
