--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Hrishikesh" />
     <meta name="description" content="This is my html page" />
     <title>R Hrishikesh Varahan</title>
-    <link rel="icon" href="india.webp" type="image/x-icon"/>
+    <link rel="icon" href="Hrishikesh_pic.jpg" type="image/x-icon" />
     <style>
       html {
         font-size: 14px;
@@ -27,7 +27,7 @@
       }
     </style>
   </head>
-  <body>
+  <body background="backgroundimage.jpeg">
     <header>
       <h1>R Hrishikesh Varahan</h1>
       <figure>
