--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Hrishikesh" />
     <meta name="description" content="This is my html page" />
     <title>R Hrishikesh Varahan</title>
-    <link rel="icon" href="Hrishikesh_pic.jpg" type="image/x-icon" />
+    <link rel="icon" href="india.webp" type="image/x-icon" />
     <style>
       html {
         font-size: 14px;
@@ -15,6 +15,9 @@
         font-family: cursive;
         font-style: italic;
         background-color: rgb(3, 24, 46);
+        background: backgroundimage.jpeg;
+        background-repeat: no-repeat;
+        background-size: 300px 100px;
       }
       a {
         color: darkorange;
@@ -27,7 +30,7 @@
       }
     </style>
   </head>
-  <body background="backgroundimage.jpeg">
+  <body>
     <header>
       <h1>R Hrishikesh Varahan</h1>
       <figure>
