--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="author" content="This is page 2 of the website" />
     <title>R Hrishikesh Varahan_1</title>
-    <link rel="icon" href="india.webp" type="image/x-icon" />
+    <link rel="icon" href="Hrishikesh_pic.jpg" type="image/x-icon" />
   </head>
   <style>
     html{
