--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
         font-family: cursive;
         font-style: italic;
         background-color: rgb(3, 24, 46);
-        background: backgroundimage.jpeg;
-        background-repeat: no-repeat;
-        background-size: 300px 100px;
       }
       a {
         color: darkorange;
@@ -123,7 +120,7 @@
         </ul>
 
         <img
-          src="dps.jpg"
+          src="dps1.jpg"
           alt="Image of DPS school"
           title="DPS School"
           height="200"
